--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 :root {
-	--f-main: '-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif';
+	--f-main: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	--c-text: #124a63;
 	--c-link: #0079ff;
 
@@ -22,6 +23,7 @@ a {
 	box-sizing: border-box;
 }
 
+@import 'utils';
 @import 'header';
 @import 'footer';
 @import 'tabs';
