--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 	--f-main: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	--c-text: #124a63;
+	--c-text-secondary: #6d7777;
 	--c-link: #0079ff;
 
 	--box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
@@ -12,6 +13,9 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: var(--f-main);
+	color: var(--c-text);
+	line-height: 1.5;
+	font-size: 18px;
 }
 
 a {
@@ -19,11 +23,26 @@ a {
 	text-decoration: none;
 }
 
+p {
+	margin: 0 0 1em;
+}
+
 * {
 	box-sizing: border-box;
 }
 
+.container {
+	padding: 0 32px;
+	margin: 0 auto;
+	max-width: 100%;
+	@media (min-width: 880px) {
+		max-width: 880px;
+	}
+}
+
 @import 'utils';
 @import 'header';
+@import 'intro';
+@import 'works';
 @import 'footer';
 @import 'tabs';
