--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,7 +1,6 @@
 header {
 	padding: 24px 32px;
-	position: sticky;
-	top: 0;
+	background: var(--c-white);
 	@media (max-width: 575px) {
 		flex-direction: column;
 	}
@@ -15,6 +14,7 @@ header {
 
 .header-nav a {
 	padding: 6px 8px;
+	color: var(--c-text-secondary);
 	&:last-child {
 		padding-right: 0;
 	}
