--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,11 +4,11 @@
 	--c-text: #124a63;
 	--c-text-secondary: #6d7777;
 	--c-link: #0079ff;
+	--c-white: #fff;
 
 	--box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
 }
 
-html,
 body {
 	padding: 0;
 	margin: 0;
@@ -21,6 +21,14 @@ body {
 a {
 	color: var(--c-link);
 	text-decoration: none;
+	transition: 0.3s ease all;
+	&:hover {
+		color: var(--c-text-secondary);
+	}
+}
+
+:is(h1, h2, h3, h4) {
+	margin: 0 0 1em;
 }
 
 p {
@@ -35,14 +43,20 @@ p {
 	padding: 0 32px;
 	margin: 0 auto;
 	max-width: 100%;
-	@media (min-width: 880px) {
-		max-width: 880px;
+	@media (min-width: 1200px) {
+		max-width: 1100px;
 	}
 }
 
+img {
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+}
+
 @import 'utils';
+@import 'tabs';
 @import 'header';
 @import 'intro';
 @import 'works';
 @import 'footer';
-@import 'tabs';
