--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	--c-text: #124a63;
 	--c-text-secondary: #6d7777;
-	--c-link: #0079ff;
+	--c-link: #124a63;
 	--c-white: #fff;
 
 	--box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
@@ -52,6 +52,13 @@ img {
 	max-width: 100%;
 	height: auto;
 	vertical-align: middle;
+}
+
+svg {
+	width: 1.5rem;
+	height: 1.5rem;
+	vertical-align: middle;
+	fill: currentColor;
 }
 
 @import 'utils';
