--- a/src/styles/_works.scss
+++ b/src/styles/_works.scss
@@ -4,39 +4,29 @@
 
 .work {
 	border-radius: 4px;
-	box-shadow: 0 2px 4px rgb(38 50 56 / 5%);
-	background: #fff;
 	position: relative;
 	transition: all 0.3s ease;
 	width: 100%;
 	&:hover {
-		box-shadow: var(--box-shadow);
 		img {
 			transform: scale(1.1);
 		}
 	}
 
-	&__body {
-		padding: 12px;
-		p {
-			margin-bottom: 0;
-		}
+	p {
+		margin-bottom: 0;
+		font-size: 16px;
 	}
 
 	&__title {
 		margin-bottom: 12px;
-		a {
-			color: var(--c-text);
-			&:hover {
-				color: var(--c-link);
-			}
-		}
 	}
 
 	&__thumb {
 		position: relative;
 		display: block;
 		overflow: hidden;
+		margin-bottom: 12px;
 		img {
 			position: absolute;
 			width: 100%;
