--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,7 +4,7 @@
 	--c-text: #124a63;
 	--c-text-secondary: #6d7777;
 	--c-link: #124a63;
-	--c-white: #fff;
+	--c-blue: #0079ff;
 
 	--box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
 }
@@ -25,6 +25,18 @@ a {
 	&:hover {
 		color: var(--c-text-secondary);
 	}
+}
+
+h1 {
+	font-size: 36px;
+}
+
+h2 {
+	font-size: 32px;
+}
+
+h3 {
+	font-size: 20px;
 }
 
 :is(h1, h2, h3, h4) {
@@ -67,3 +79,4 @@ svg {
 @import 'intro';
 @import 'works';
 @import 'footer';
+@import 'single';
