Update image size

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -12,6 +12,12 @@ header {
 	font-size: 32px;
 }
 
+.header-darkmode {
+	background: none;
+	border: none;
+	color: var(--c-text);
+}
+
 .header-nav a {
 	padding: 6px 8px;
 	color: var(--c-text-secondary);
