--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,6 +1,6 @@
 .footer-inner {
 	padding: 60px 0;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-top: 1px solid var(--c-border);
 }
 
 .footer-socials {
