--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -1,6 +1,6 @@
 .intro {
 	padding: 60px 0;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	border-bottom: 1px solid var(--c-border);
 	.container {
 		display: grid;
 		@media (min-width: 768px) {
