--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@
 	--f-main: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 	--c-text: #124a63;
-	--c-text-secondary: #6d7777;
+	--c-text-secondary: #00a99d;
 	--c-link: #124a63;
 	--c-blue: #0079ff;
 	--c-border: rgba(0, 0, 0, 0.1);
