--- a/src/styles/_single.scss
+++ b/src/styles/_single.scss
@@ -33,4 +33,20 @@
 		opacity: 0.7;
 		color: var(--c-text-secondary);
 	}
+
+	&__content a {
+		color: var(--c-blue);
+	}
+
+	img {
+		box-shadow: var(--box-shadow);
+		transition: 0.3s ease all;
+		& + img {
+			margin-top: 24px;
+		}
+		&:hover {
+			transform: translateY(-3px);
+			box-shadow: 0px 7px 25px rgba(0, 0, 0, 0.1);
+		}
+	}
 }
