--- a/src/styles/_tabs.scss
+++ b/src/styles/_tabs.scss
@@ -7,14 +7,20 @@
 .tabs-nav__link {
 	cursor: pointer;
 	padding: 8px 16px;
+
 	border: 0;
 	border-bottom: 2px solid transparent;
 	background: none;
-	font-size: 18px;
 	color: var(--c-text-secondary);
+
+	font-size: 18px;
+	transition: 0.3s ease color;
 	&--active,
 	&:hover {
 		color: var(--c-text);
+	}
+	&--active {
+		border-bottom: 1px solid var(--c-text);
 	}
 }
 
